--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -21,6 +21,7 @@ h6 {
   font-family: v.$font-heading;
   color: v.$secondary;
   margin-bottom: 0;
+  letter-spacing: 0.01rem;
 }
 
 h1,
